[package]
name = "ntdda"
version = "0.1.0"
description = "Discontinuous Deformation Analysis"
authors = ["David Doolin"]
edition = "2021"

[lib]
name = "ntdda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

